[Improvements] Done alot of things

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,19 +1,34 @@
-mainPage.title=Kezd\u0151lap
-mainpage.product=term\u00E9k
+home.title=Kezd\u0151lap
+
+nav.home=kezd\u0151lap
+nav.product=term\u00E9k
+nav.product.insert=term\u00E9k felv\u00E9tel
+nav.product.update=term\u00E9k m\u00F3dos\u00EDt\u00E1s
+nav.shelf=polc
+nav.shelf.insert=polcfelv\u00E9tel
+nav.shelf.update=polcm\u00F3dos\u00EDt\u00E1s
+nav.pallet=\u00E1ru
+nav.pallet.insert=\u00E1rurendel\u00E9s
+nav.pallet.delete=\u00E1rukiad\u00E1s
+nav.statics=statisztik\u00E1k
+
 inflow.title=\u00C1ru Rendel\u00E9s
 inflow.h1=Raklap \u00F6sszet\u00E9tele
 inflow.label1=v\u00E1laszd ki a term\u00E9ket amit rendelni szeretn\u00E9l
 inflow.label2=v\u00E1laszd ki a a polcot ahol t\u00E1rolni szeretn\u00E9d a raklapot
 inflow.label3=A raklapon l\u00E9v\u0151 term\u00E9k mennyis\u00E9g
+
 placeholder.name=term\u00E9k n\u00E9v
 placeholder.brand=m\u00E1rka
 placeholder.price=a raklap \u00E9rt\u00E9ke
+
 management.product.title=\u00C1ru felv\u00E9tel
 management.product.h1=\u00C1ru hozz\u00E1ad\u00E1sa Adatb\u00E1zishoz
 management.product.label1=A Term\u00E9kneve
 management.product.label2=A Term\u00E9k m\u00E1rk\u00E1ja
 management.product.label3=A Term\u00E9k \u00C9rt\u00E9ke
 management.product.inclompeteInput=K\u00E9rlek n\u00E9zdmeg hogy rendesen t\u00F6lt\u00F6tted-e ki a mez\u0151ket
+
 management.shelf.title=Polc felv\u00E9tel
 management.shelf.h1=Polc hozz\u00E1ad\u00E1sa Adatb\u00E1zishoz
 management.shelf.label1=A polc helye
