[Features] Exception Handler and minor Bugfixes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,13 +4,17 @@ nav.home=kezd\u0151lap
 nav.product=term\u00E9k
 nav.product.insert=term\u00E9k felv\u00E9tel
 nav.product.update=term\u00E9k m\u00F3dos\u00EDt\u00E1s
+nav.product.delete=term\u00E9k t\u00F6rl\u00E9s
+
 nav.shelf=polc
-nav.shelf.insert=polcfelv\u00E9tel
-nav.shelf.update=polcm\u00F3dos\u00EDt\u00E1s
+nav.shelf.insert=polc felv\u00E9tel
+nav.shelf.update=polc m\u00F3dos\u00EDt\u00E1s
+nav.shelf.delete=polc t\u00F6rl\u00E9s
 nav.pallet=\u00E1ru
 nav.pallet.insert=\u00E1rurendel\u00E9s
 nav.pallet.delete=\u00E1rukiad\u00E1s
 nav.statics=statisztik\u00E1k
+
 
 inflow.title=\u00C1ru Rendel\u00E9s
 inflow.h1=Raklap \u00F6sszet\u00E9tele
@@ -28,6 +32,13 @@ management.product.label1=A Term\u00E9kneve
 management.product.label2=A Term\u00E9k m\u00E1rk\u00E1ja
 management.product.label3=A Term\u00E9k \u00C9rt\u00E9ke
 management.product.inclompeteInput=K\u00E9rlek n\u00E9zdmeg hogy rendesen t\u00F6lt\u00F6tted-e ki a mez\u0151ket
+product.error.duplicate=Ez a term\u00E9k l\u00E9tezik
+
+management.product.delete.title=\u00C1rut\u00F6rl\u00E9s
+management.product.delete.h1=\u00C1ru elt\u00E1vol\u00EDt\u00E1sa az adatb\u00E1zisb\u00F3l
+
+management.product.update.title=\u00C1rum\u00F3dos\u00EDt\u00E1s
+management.product.update.h1=\u00C1rum\u00F3dos\u00EDt\u00E1s
 
 management.shelf.title=Polc felv\u00E9tel
 management.shelf.h1=Polc hozz\u00E1ad\u00E1sa Adatb\u00E1zishoz
@@ -35,3 +46,13 @@ management.shelf.label1=A polc helye
 placeholder.loco=A polc hely\u00E9t ide ird
 management.shelf.label2=A polc kapacit\u00E1sa
 management.shelf.inclompeteInput=K\u00E9rlek n\u00E9zdmeg hogy rendesen t\u00F6lt\u00F6tted-e ki a mez\u0151ket
+
+management.shelf.delete.title=polc elt\u00E1vol\u00EDt\u00E1sa
+management.shelf.delete.h1=polc elt\u00E1vol\u00EDt\u00E1sa
+
+management.shelf.update.title=polcm\u00F3dos\u00EDt\u00E1s
+management.shelf.update.h1=polcm\u00F3dos\u00EDt\u00E1s
+errors.title=Hiba
+error.404=A keresett oldal nem l\u00E9tezik.
+error.500=Valami baj t\u00F6rt\u00E9nt.
+error.shelf.out.of.capacity=Nem f\u00E9r t\u00F6bb raklap a polcba.
