[FEATURES] outflow and minor bugfixes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,6 +14,7 @@ nav.pallet=\u00E1ru
 nav.pallet.insert=\u00E1rurendel\u00E9s
 nav.pallet.delete=\u00E1rukiad\u00E1s
 nav.statics=statisztik\u00E1k
+nav.pallet.out=\u00E1ru kiad\u00E1s
 
 
 inflow.title=\u00C1ru Rendel\u00E9s
@@ -21,7 +22,7 @@ inflow.h1=Raklap \u00F6sszet\u00E9tele
 inflow.label1=v\u00E1laszd ki a term\u00E9ket amit rendelni szeretn\u00E9l
 inflow.label2=v\u00E1laszd ki a a polcot ahol t\u00E1rolni szeretn\u00E9d a raklapot
 inflow.label3=A raklapon l\u00E9v\u0151 term\u00E9k mennyis\u00E9g
-
+inflow.label4=raklap menyis\u00E9g
 placeholder.name=term\u00E9k n\u00E9v
 placeholder.brand=m\u00E1rka
 placeholder.price=a raklap \u00E9rt\u00E9ke
@@ -36,7 +37,7 @@ product.error.duplicate=Ez a term\u00E9k l\u00E9tezik
 
 management.product.delete.title=\u00C1rut\u00F6rl\u00E9s
 management.product.delete.h1=\u00C1ru elt\u00E1vol\u00EDt\u00E1sa az adatb\u00E1zisb\u00F3l
-
+management.product.delete.label=v\u00E1laszd ki a term\u00E9ket amit t\u00F6r\u00F6lni szeretn\u00E9l
 management.product.update.title=\u00C1rum\u00F3dos\u00EDt\u00E1s
 management.product.update.h1=\u00C1rum\u00F3dos\u00EDt\u00E1s
 
@@ -49,10 +50,21 @@ management.shelf.inclompeteInput=K\u00E9rlek n\u00E9zdmeg hogy rendesen t\u00F6l
 
 management.shelf.delete.title=polc elt\u00E1vol\u00EDt\u00E1sa
 management.shelf.delete.h1=polc elt\u00E1vol\u00EDt\u00E1sa
+management.shelf.delete.label=v\u00E1laszd ki a polcot amit t\u00F6r\u00F6lni szeretn\u00E9l
 
 management.shelf.update.title=polcm\u00F3dos\u00EDt\u00E1s
 management.shelf.update.h1=polcm\u00F3dos\u00EDt\u00E1s
+management.shelf.update.label=v\u00E1laszd ki a polcot amit m\u00F3dos\u00EDtani szeretn\u00E9l
+
 errors.title=Hiba
 error.404=A keresett oldal nem l\u00E9tezik.
 error.500=Valami baj t\u00F6rt\u00E9nt.
 error.shelf.out.of.capacity=Nem f\u00E9r t\u00F6bb raklap a polcba.
+
+submit.btn=elk\u00FCld\u00E9s
+duplicate.btn=\u00FAj term\u00E9k
+
+outflow.title=\u00E1rukiad\u00E1s
+outflow.h1=Kiad\u00E1s
+outflow.label1=kiadott term\u00E9k a taklapon
+outflow.label2=kiadott raklapmennyis\u00E9g
