[IMPROVEMENT] english i18n and some formating

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,6 +40,7 @@ management.product.delete.h1=\u00C1ru elt\u00E1vol\u00EDt\u00E1sa az adatb\u00E1
 management.product.delete.label=v\u00E1laszd ki a term\u00E9ket amit t\u00F6r\u00F6lni szeretn\u00E9l
 management.product.update.title=\u00C1rum\u00F3dos\u00EDt\u00E1s
 management.product.update.h1=\u00C1rum\u00F3dos\u00EDt\u00E1s
+management.product.update.label=v\u00E1laszd ki a term\u00E9ket amin m\u00F3dos\u00EDtani szeretn\u00E9l
 
 management.shelf.title=Polc felv\u00E9tel
 management.shelf.h1=Polc hozz\u00E1ad\u00E1sa Adatb\u00E1zishoz
